// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Component should render closed 1`] = `
.container {
  width: 100%;
  color: #000;
}

.selectedContainer {
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  align-items: center;
  cursor: pointer;
  border: 1px solid rgba(213, 222, 241, 0.5);
  border-radius: 5px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 15px;
  padding-right: 15px;
}

.container {
  position: absolute;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  background-color: #FFF;
  z-index: 200;
  border-radius: 3px;
  padding: 10px 15px;
  opacity: 0;
  color: #D5DEF1;
  font-size: 15px;
}

<div
  className="container"
>
  <div>
    <div
      className="selectedContainer"
      data-testid="select"
      onClick={[Function]}
    >
      <div>
        <div>
          please select an option
        </div>
      </div>
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-angle-down fa-w-10 "
        data-icon="angle-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="container"
      onClick={[Function]}
      style={
        Object {
          "bottom": undefined,
          "left": undefined,
          "right": undefined,
          "top": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`Select Component should render open 1`] = `
.container {
  width: 100%;
  color: #000;
}

.selectedContainer {
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  align-items: center;
  cursor: pointer;
  border: 1px solid rgba(213, 222, 241, 0.5);
  border-radius: 5px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 15px;
  padding-right: 15px;
}

.container {
  position: absolute;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  background-color: #FFF;
  z-index: 200;
  border-radius: 3px;
  padding: 10px 15px;
  opacity: 0;
  color: #D5DEF1;
  font-size: 15px;
}

<div
  className="container"
>
  <div>
    <div
      className="selectedContainer"
      data-testid="select"
      onClick={[Function]}
    >
      <div>
        <div>
          please select an option
        </div>
      </div>
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-angle-down fa-w-10 "
        data-icon="angle-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="container"
      onClick={[Function]}
      style={
        Object {
          "bottom": undefined,
          "left": undefined,
          "right": undefined,
          "top": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`Select Component should select and close 1`] = `
.container {
  width: 100%;
  color: #000;
}

.selectedContainer {
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  align-items: center;
  cursor: pointer;
  border: 1px solid rgba(213, 222, 241, 0.5);
  border-radius: 5px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 15px;
  padding-right: 15px;
}

.container {
  position: absolute;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  background-color: #FFF;
  z-index: 200;
  border-radius: 3px;
  padding: 10px 15px;
  opacity: 0;
  color: #D5DEF1;
  font-size: 15px;
}

<div
  className="container"
>
  <div>
    <div
      className="selectedContainer"
      data-testid="select"
      onClick={[Function]}
    >
      <div>
        <div>
          please select an option
        </div>
      </div>
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-angle-down fa-w-10 "
        data-icon="angle-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="container"
      onClick={[Function]}
      style={
        Object {
          "bottom": undefined,
          "left": undefined,
          "right": undefined,
          "top": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`Select Component should with an option selected 1`] = `
.container {
  width: 100%;
  color: #000;
}

.selectedContainer {
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  align-items: center;
  cursor: pointer;
  border: 1px solid rgba(213, 222, 241, 0.5);
  border-radius: 5px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 15px;
  padding-right: 15px;
}

.container {
  position: absolute;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  background-color: #FFF;
  z-index: 200;
  border-radius: 3px;
  padding: 10px 15px;
  opacity: 0;
  color: #D5DEF1;
  font-size: 15px;
}

<div
  className="container"
>
  <div>
    <div
      className="selectedContainer"
      data-testid="select"
      onClick={[Function]}
    >
      <div>
        <div>
          one
        </div>
      </div>
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-angle-down fa-w-10 "
        data-icon="angle-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="container"
      onClick={[Function]}
      style={
        Object {
          "bottom": undefined,
          "left": undefined,
          "right": undefined,
          "top": undefined,
        }
      }
    />
  </div>
</div>
`;
